# Crafty

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh  run.sh  test.sh
data/: blocks.json
data/blocks/: __init__.json
data/blocks/data/: Motion.json
data/blocks/data/Control/: move_motion.json
data/blocks/data/Looks/: move_motion.json
data/blocks/data/Motion/: hello.json  move_motion.json
design/: Design.drawio  Model Layer.drawio
lua/: control.lua  motion.lua  variables.lua
src/: main.cpp
src/common/: common_logger.cpp  common_logger.h
src/common/events/: event_base.h  event_dispatcher.cpp  event_dispatcher.h
src/common/logger/: logger.cpp  logger.h
src/logic/: game_events.h  interpreter.h  logic_events.h  logic_logger.cpp  logic_logger.h  lua_interpreter.cpp  lua_interpreter.h  scope_table.cpp  scope_table.h  symbol_table.cpp  symbol_table.h
src/logic/error/: value_not_found.cpp  value_not_found.h
src/logic/lua_impl/: lua_interpreter.cpp  lua_interpreter.h  lua_module_cache.cpp  lua_module_cache.h  lua_script_runtime.cpp  lua_script_runtime.h  lua_state_manager.cpp  lua_state_manager.h  thread_pool.cpp  thread_pool.h
src/model/: asset.cpp  asset.h  character.cpp  character.h  model_events.h  model_logger.cpp  model_logger.h  project.cpp  project.h  project_manager.cpp  project_manager.h  script.cpp  script.h
src/model/block/: BlockDefinition.h  BlockInstance.cpp  BlockInstance.h  BlockLibrary.cpp  BlockLibrary.h  block_definition.cpp  block_definition.h  block_instance.cpp  block_instance.h  block_library.cpp  block_library.h  block_storage.h  input_slot.cpp  input_slot.h  input_slot_instance.cpp  input_slot_instance.h  json_block_storage.cpp  json_block_storage.h  value.cpp  value.h  value_type.cpp  value_type.h
src/model/error/: type_mismatch.cpp  type_mismatch.h
src/model/events/: events.h
src/model/identity/: id.cpp  id.h  id_generator.h  identifiable.cpp  identifiable.h  prefixed_id_generator.cpp  prefixed_id_generator.h  store.h  string_id.h
src/model/identity/id/: id.cpp  id.h  id_generator.h  prefixed_id_generator.h  store.h  string_id.cpp  string_id.h
src/model/identity/serializable/: serializable.cpp  serializable.h
src/model/public/: block_library.cpp  block_library.h  project_api.cpp  project_api.h
src/model/public/block/: block_definition.h  block_instance.cpp  block_instance.h  block_library.cpp
src/model/serialization/: serializable.cpp  serializable.h  serialization_context.h  serialization_engine.h
src/model/utils/: ID_manager.cpp  ID_manager.h  fs.cpp  fs.h  json.cpp  json.h  serializable.cpp  serializable.h  store.h
src/ui/: BlockCategoryPanel.cpp  BlockCategoryPanel.h  MainMenuBar.cpp  MainMenuBar.h  action_deferrer.cpp  action_deferrer.h  main_menu_bar.cpp  ui_logger.cpp  ui_logger.h  ui_options.cpp  ui_options.h
src/ui/character/: character_manager.cpp  character_manager.h  character_miniview.cpp  character_miniview.h  character_view.cpp  character_view.h
src/ui/character_manager/: CharacterManager.cpp  CharacterManager.h  character_manager.cpp  character_manager.h
src/ui/editor/: BlockCanvas.cpp  BlockCanvas.h  BlockCategoryPanel.cpp  BlockCategoryPanel.h  BlockPicker.cpp  BlockPicker.h  BlockView.cpp  BlockView.h  block_canvas.cpp  block_canvas.h  block_category_panel.cpp  block_category_panel.h  block_picker.cpp  block_picker.h  block_view.cpp  block_view.h  script_view.cpp  script_view.h
src/ui/stage/: Stage.cpp  Stage.h  stage.cpp  stage.h  stage_manager.cpp  stage_manager.h
src/ui/utils/: MaterialSymbols.h  file_utils.cpp  images.cpp  images.h  material_symbols.h  platform.cpp  platform.h  upload_file.cpp  upload_file.h
src/ui/views/: BlockView.cpp  BlockView.h
tests/: CommonLayerTests.cpp  ModelLayerTests.cpp  UILayerTests.cpp  hello_test.cpp
